#### 2.6.5
Stable

* Upgrade tinymce 4.2.5 => 4.3.2
* Fix bug About plugin with lowercase for tpl files
* Update news skin (index, loop) + Add microdata
* Breadcrumb icon option (frontend)
* Fix loop news + tags
* Fix Affix logo + header
* Redesign Footer default custom
    * Add section Footer
* Add facebook block footer (frontend)
* Add context "mix" in CMS page
* Add s_page_all in db CMS page
* Add share for mobile (footbar)
* Add quickAccess in breadcrumb (skin)
* Update info for content_css in editor (backend)
* Add lang dropdown (skin frontend)
* Add tabs,tabs-arrow header.tpl (skin frontend)
* Upgrade jquery 1.11.1 => 1.12.0
* Upgrade jquery ui 1.10.3 => 1.10.4
* Add sortable for image galery (backend + frontend)
    * Sort image galery by img_order
    * Add sql for img_order + upgrade sql 2.6.0 => 2.6.5
* Fix bug extend_valid_elements (backend)
* Update img size configuration (default)
* Add about dynamic page
* Add general microdata
* Fix bug library (root)
* Fix bug utf-8 on About plugin (contact.tpl)
* Update youtube tinymce 1.0.1 => 1.1.0
* Change in global less (skin default)
* Add global library (magixcjquery & smarty)
* Add About plugin

#### 2.6.1
Stable
* Add product listing with select & exclude
* change class name effect (product)
* Readme change url logo
* Fix #127 $allowed return false
* Upgrade tinymce 4.2.3 => 4.2.5
* Upgrade Center Column (skin)
* Change structure for less skin (default)
* Add Font Awesome plugin in tinymce
* Fix bug with goliath effect
* Fix bug ming effect
* Add block google font (skin)

#### 2.6.0
Stable
* Fix Upgrade menu (install/upgrade)
* Fix remove uppercase sidebar (admin)
* Add new structure less
* Add block good choice (skin)
    * Add menu.less (dropdown menu skin)
    * Add block.less (skin)
* Add new effect in .less (skin)
    * Add new loop condition for effect
* Upgrade Center column 2.0 => 3.0 (skin)
* Add new responsive utilities (skin)
    * Add toolbar tpl (skin)
    * Add new primary menu (skin)