@@ -26,3 +26,4 @@ plugins/hipay/
 plugins/ogone/
 plugins/mailchimp/
 plugins/cartpay/
+plugins/blocklink/
