@@ -1,9 +1,14 @@
+{strip}
 {if isset($data.id)}
     {$data = [$data]}
 {/if}
 {if !$classCol}
-    {$classCol = 'col-xs-12 col-sm-6 col-md-4'}
+    {$classCol = 'col-xs-12 col-sm-6'}
 {/if}
+{if !$truncate}
+    {$truncate = 250}
+{/if}
+{/strip}
 {if is_array($data) && !empty($data)}
     {if isset($effect) && $effect eq "bob"}
         {foreach $data as $item}
@@ -25,7 +30,7 @@
                         <div class="desc">
                             {if $item.content}
                                 <p>
-                                    {$item.content|strip_tags|truncate:250:'...'}
+                                    {$item.content|strip_tags|truncate:$truncate:'...'}
                                 </p>
                             {/if}
                         </div>
@@ -51,7 +56,7 @@
                         <div itemprop="description" class="desc">
                             {if $item.content}
                                 <p>
-                                    {$item.content|strip_tags|truncate:50:'...'}
+                                    {$item.content|strip_tags|truncate:$truncate:'...'}
                                 </p>
                             {/if}
                         </div>
