@@ -6,7 +6,7 @@
 ----- Global Sizes -----
 \*--------------------*/
 
-@footer-height: 700px;
+@footer-height: 905px;
 
 
 /*--------------------------------*\
@@ -16,7 +16,7 @@
 // --- xs sizes
 
 // --- sm sizes
-@footer-height-sm: @footer-height - 175;
+@footer-height-sm: 525px;
 
 // --- md sizes
 @footer-height-md: @footer-height-sm;
