@@ -8,6 +8,22 @@
 	// Define content style
 	.normalize-content(@main-color);
 
+	#article > div {
+		.desc {
+			overflow: hidden;
+		}
+
+		> h3, > hr {
+			clear: both;
+		}
+
+		> h3 {
+			border-bottom: 1px solid #eee;
+			padding-bottom: 10px;
+			margin-bottom: 20px;
+		}
+	}
+
 	section {
 		.container {
 			.direct-headings({ .main-title(@main-color) });
